--- a/.gitignore
+++ b/.gitignore
@@ -8,37 +8,79 @@ pnpm-debug.log*
 lerna-debug.log*
 
 # Dependencies
-node_modules
-.pnp
+node_modules/
+client/node_modules/
+server/node_modules/
+/.pnp
 .pnp.js
 
 # Testing
-coverage
+/coverage
+/client/coverage
+/server/coverage
 *.lcov
 
 # Production
-dist
+/dist
+/build
+/client/dist
+/client/build
 dist-ssr
-build
+
+# Local development
+.env
+.env.local
+.env.development
+.env.development.local
+.env.test
+.env.test.local
+.env.production
+.env.production.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 !.vscode/settings.json
-.idea
+!.vscode/launch.json
+!.vscode/tasks.json
+.idea/
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Debug files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+.npm/
+.eslintcache
+.stylelintcache
 
 # OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
