--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -5,16 +5,16 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
-# Establece permisos para GitHub Pages
+# Sets permissions of the GITHUB_TOKEN
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Permite solo un despliegue a la vez
+# Allow only one concurrent deployment
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
   # Build job
@@ -22,16 +22,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
           cache: 'npm'
+          cache-dependency-path: client/package-lock.json
           
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v4
         
       - name: Install dependencies
         run: |
@@ -48,19 +49,32 @@ jobs:
           cd client
           npm run build
         
+      - name: Verify build output
+        run: |
+          if [ ! -d "./client/dist" ] || [ -z "$(ls -A ./client/dist)" ]; then
+            echo "Error: Build directory is empty or does not exist"
+            exit 1
+          fi
+          echo "Build directory contains the following files:"
+          ls -la ./client/dist
+        
+      - name: Copy .nojekyll file
+        run: |
+          touch ./client/dist/.nojekyll
+        
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
           path: './client/dist'
 
   # Deployment job
   deploy:
     environment:
-      name: github-pages
+      name: deployment
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
