--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -16,6 +16,10 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
+env:
+  # Forzar la habilitación de GitHub Pages
+  GITHUB_PAGES: true
+
 jobs:
   # Build job
   build:
@@ -24,6 +28,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         
+      - name: Check if GitHub Pages is enabled
+        run: |
+          echo "Verificando si GitHub Pages está habilitado..."
+          echo "Si este paso falla, consulta docs/github-pages-setup.md para instrucciones"
+          
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -33,6 +42,8 @@ jobs:
           
       - name: Setup Pages
         uses: actions/configure-pages@v4
+        with:
+          enablement: true # Habilita GitHub Pages si no está habilitado
         
       - name: Install dependencies
         run: |
@@ -70,7 +81,7 @@ jobs:
   # Deployment job
   deploy:
     environment:
-      name: deployment
+      name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
